# python-crash-course

./: 03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  README.md  pyproject.toml
