[tool.poetry]
name = "python-crash-course"
version = "0.1.0"
description = ""
authors = ["Karolina Lencina <61248646+karolencina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
